--- a/src/app/pages/payment/components/payment-method/payment-method-create/payment-method-create.component.html
+++ b/src/app/pages/payment/components/payment-method/payment-method-create/payment-method-create.component.html
@@ -25,7 +25,7 @@
               {{'pick_a_method' | translate }}
               <span class="text-danger">*</span>
             </span>
-            <span [nzTooltipTitle]="tooltipPickADay" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="info-circle" nzTheme="outline"></span>
+            <span [nzTooltipTitle]="tooltipPickADay" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question" nzTheme="outline"></span>
           </div>
 
           <nz-select formControlName="type" style="display: block" [nzDisabled]="!isCreate">
