fix wrong class name of "question-circle"

--- a/src/app/pages/setting/components/permissions/create-permission/create-permission.component.html
+++ b/src/app/pages/setting/components/permissions/create-permission/create-permission.component.html
@@ -20,7 +20,7 @@
             {{'permission_group_name' | translate }}
             <span class="text-danger">*</span>
           </span>
-          <span nzTooltipTitle="{{'guide_group_permission_name' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question" nzTheme="outline"></span>
+          <span nzTooltipTitle="{{'guide_group_permission_name' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
         </div>
         <input nz-input [(ngModel)]="roleName" autofocus>
       </div>
@@ -43,7 +43,7 @@
         {{'pick_permissions' | translate }}
         <span class="text-danger">*</span>
       </span>
-      <span nzTooltipTitle="{{'guide_group_permission_pick' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question" nzTheme="outline"></span>
+      <span nzTooltipTitle="{{'guide_group_permission_pick' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
     </div>
 
     <div class="permission-picker">
