--- a/src/app/pages/staff/components/create-staff/create-staff.component.html
+++ b/src/app/pages/staff/components/create-staff/create-staff.component.html
@@ -77,7 +77,7 @@
             <span class="text-danger">*</span>
 
             <button nz-button nzType="text" nzShape="circle" class="tooltip" nz-popover nzPopoverContent="Mã slug là 1 chuỗi ký tự gồm số hoặc chữ thường viết liền không dấu hoặc cách nhau bởi dấu gạch ngang (-) và không chứa ký tự đặc biệt">
-              <span nz-icon nzType="question" style="height: 14px"></span>
+              <span nz-icon nzType="question-circle" style="height: 14px"></span>
             </button>
           </div>
 
