--- a/src/app/pages/organization/components/create-organization/create-organization.component.html
+++ b/src/app/pages/organization/components/create-organization/create-organization.component.html
@@ -20,7 +20,7 @@
               {{'organization_name' | translate }}
               <span class="text-danger">*</span>
             </span>
-            <span nzTooltipTitle="{{'guide_organization_name' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question" nzTheme="outline"></span>
+            <span nzTooltipTitle="{{'guide_organization_name' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
           </div>
           <input nz-input autofocus formControlName="name" [nzStatus]="(this.orgForm.get('name')?.invalid && (orgForm.get('name')?.touched || isSubmit)) ? 'error' : ''">
 
@@ -35,7 +35,7 @@
               {{ 'status' | translate }}
               <span class="text-danger">*</span>
             </span>
-            <span nzTooltipTitle="{{'guide_organization_name' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question" nzTheme="outline"></span>
+            <span nzTooltipTitle="{{'guide_organization_name' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
           </div>
           <nz-switch formControlName="status">
           </nz-switch>
@@ -47,7 +47,7 @@
               Email
               <span class="text-danger">*</span>
             </span>
-            <span nzTooltipTitle="{{'guide_organization_email' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question" nzTheme="outline"></span>
+            <span nzTooltipTitle="{{'guide_organization_email' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
           </div>
           <input nz-input formControlName="email" [nzStatus]="(this.orgForm.get('email')?.invalid && (orgForm.get('email')?.touched || isSubmit)) ? 'error' : ''">
 
@@ -62,7 +62,7 @@
               {{'phone_number' | translate }}
               <span class="text-danger">*</span>
             </span>
-            <span nzTooltipTitle="{{'guide_organization_phone' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question" nzTheme="outline"></span>
+            <span nzTooltipTitle="{{'guide_organization_phone' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
           </div>
           <input nz-input formControlName="mobile" [nzStatus]="(this.orgForm.get('mobile')?.invalid && (orgForm.get('mobile')?.touched || isSubmit)) ? 'error' : ''">
 
@@ -77,7 +77,7 @@
               {{'organization_representative' | translate }}
               <span class="text-danger">*</span>
             </span>
-            <span nzTooltipTitle="{{'guide_organization_admin' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question" nzTheme="outline"></span>
+            <span nzTooltipTitle="{{'guide_organization_admin' | translate}}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
           </div>
 
           <div>
@@ -97,7 +97,7 @@
               {{'data_process_type' | translate}}
               <span class="text-danger">*</span>
             </span>
-            <span [nzTooltipTitle]="tooltipDataProcessType" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question" nzTheme="outline"></span>
+            <span [nzTooltipTitle]="tooltipDataProcessType" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
           </div>
 
           <div>
@@ -119,7 +119,7 @@
                 {{'e_learning_domain' | translate}}
                 <span class="text-danger">*</span>
               </span>
-              <span [nzTooltipTitle]="tooltipELearningDomain" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question" nzTheme="outline"></span>
+              <span [nzTooltipTitle]="tooltipELearningDomain" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
             </div>
             <input nz-input formControlName="websiteElearning">
           </div>
@@ -134,7 +134,7 @@
                 {{'acp_domain' | translate}}
                 <span class="text-danger">*</span>
               </span>
-              <span [nzTooltipTitle]="tooltipAcpDomain" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question" nzTheme="outline"></span>
+              <span [nzTooltipTitle]="tooltipAcpDomain" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
             </div>
 
             <input nz-input formControlName="websiteCms" [nzStatus]="(this.orgForm.get('websiteCms')?.invalid && (orgForm.get('websiteCms')?.touched || isSubmit)) ? 'error' : ''">
@@ -150,7 +150,7 @@
             <span class="text-label">
               Logo
             </span>
-            <span nzTooltipTitle="{{ 'guide_organization_logo' | translate }}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question" nzTheme="outline"></span>
+            <span nzTooltipTitle="{{ 'guide_organization_logo' | translate }}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
           </div>
 
           <div class="select-file">
@@ -234,7 +234,7 @@
               {{'forum_domain' | translate}}
               <span class="text-danger">*</span>
             </span>
-            <span [nzTooltipTitle]="tooltipForumDomain" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question" nzTheme="outline"></span>
+            <span [nzTooltipTitle]="tooltipForumDomain" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
           </div>
 
           <input nz-input formControlName="websiteForum">
@@ -250,7 +250,7 @@
               {{'homepage_domain' | translate}}
               <span class="text-danger">*</span>
             </span>
-            <span [nzTooltipTitle]="tooltipHomepageDomain" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question" nzTheme="outline"></span>
+            <span [nzTooltipTitle]="tooltipHomepageDomain" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
           </div>
 
           <input nz-input formControlName="website" [nzStatus]="(orgForm.get('website')?.invalid &&
@@ -268,7 +268,7 @@
               {{'address' | translate}}
               <span class="text-danger">*</span>
             </span>
-            <span nzTooltipTitle="{{ 'guide_organization_address' | translate }}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question" nzTheme="outline"></span>
+            <span nzTooltipTitle="{{ 'guide_organization_address' | translate }}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
           </div>
 
           <input nz-input formControlName="address">
@@ -280,7 +280,7 @@
               {{'embed_map' | translate}}
               <span class="text-danger">*</span>
             </span>
-            <span nzTooltipTitle="{{ 'guide_organization_embed_map' | translate }}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question" nzTheme="outline"></span>
+            <span nzTooltipTitle="{{ 'guide_organization_embed_map' | translate }}" nzTooltipPlacement="top" nz-tooltip nz-icon nzType="question-circle" nzTheme="outline"></span>
           </div>
           <textarea nz-input formControlName="map" [nzAutosize]="{ minRows: 3, maxRows: 6 }"></textarea>
         </div>
