hotfix: add catalog name for price

--- a/src/app/pages/price-list/components/price/price-detail/price-detail.component.html
+++ b/src/app/pages/price-list/components/price/price-detail/price-detail.component.html
@@ -27,10 +27,10 @@
               {{'price_six_months' | translate }}
             </span>
             <nz-input-group [nzAddOnAfter]="currencyTemplate" nzCompact>
-                <nz-input-number [nzMin]="1" formControlName="priceValueSix" style="width: 100%"
-                       [nzStatus]="(priceForm.get('priceValueSix')?.invalid &&
-                                   (priceForm.get('priceValueSix')?.touched || isSubmit)) ?
-                                    'error' : ''"
+                <nz-input-number [nzMin]="0" [nzStep]="1000" formControlName="priceValueSix" style="width: 100%"
+                                 [nzStatus]="(priceForm.get('priceValueSix')?.invalid &&
+                                             (priceForm.get('priceValueSix')?.touched || isSubmit)) ?
+                                              'error' : ''"
                 ></nz-input-number>
             </nz-input-group>
 
@@ -72,7 +72,7 @@
               {{'price_one_year' | translate }}
             </span>
           <nz-input-group [nzAddOnAfter]="currencyTemplate" nzCompact>
-            <nz-input-number [nzMin]="1" formControlName="priceValueYear" style="width: 100%"
+            <nz-input-number [nzMin]="0" [nzStep]="1000" formControlName="priceValueYear" style="width: 100%"
                              [nzStatus]="(priceForm.get('priceValueYear')?.invalid &&
                                          (priceForm.get('priceValueYear')?.touched || isSubmit)) ?
                                           'error' : ''"
