--- a/src/app/pages/price-list/components/price/price-list/price-list.component.html
+++ b/src/app/pages/price-list/components/price/price-list/price-list.component.html
@@ -21,6 +21,7 @@
       <table-column [dataType]="COL_DATA_TYPE.SELECTION" fixColumn="left"></table-column>
       <table-column header="{{ 'no' | translate }}" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
       <table-column header="{{ 'price_name' | translate }}" key="name"  [width]="'180px'"></table-column>
+      <table-column header="{{ 'category_name' | translate }}" key="catalogName"  [width]="'180px'"></table-column>
       <table-column header="{{ 'price_six_months' | translate }}" key="priceValueSix"  [width]="'180px'">
         <ng-template appCell let-data>
           {{data.priceValueSix | currency: 'VND'}}
