--- a/src/app/pages/price-list/components/price/price-detail/price-detail.component.html
+++ b/src/app/pages/price-list/components/price/price-detail/price-detail.component.html
@@ -84,6 +84,13 @@
                         priceForm.get('priceValueYear')?.hasError('required')"
           >{{'price_one_year' | translate }} {{'cannot_blank' | translate}}!</span>
         </div>
+
+        <div nz-col [nzSpan]="16">
+          <div class="text-label">
+            {{'short_description' | translate}}
+          </div>
+          <textarea nz-input [nzAutosize]="{ minRows: 3 }" formControlName="description"></textarea>
+        </div>
       </div>
 
       <ng-template #currencyTemplate>
